# coding-agents

./: .bandit  .env.example  .env.example.production  .gitignore  Dockerfile  Dockerfile.production  README.md  REPORT.md  action.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  code-agent.yml  feedback-loop.yml  reviewer-agent-webhook.yml  reviewer-agent.yml
src/code_agent/: cli.py  code_analyzer.py  code_modifier.py  github_client.py  llm_client.py  orchestrator.py  prompts.py  state_manager.py
src/common/: config.py  executor.py  models.py  state_manager.py  utils.py
src/reviewer_agent/: analysis_engine.py  ci_analyzer.py  orchestrator.py  reviewer.py
src/webhook_server/: __init__.py  app.py  event_router.py  github_app_auth.py  middleware.py  models.py  tasks.py  webhook_handler.py
tests/: test_config.py  test_reviewer_orchestrator.py
